Partial update for the most/easier requirements from the review
Signed-off-by: Konstantin Polihronov <polychronov@gmail.com>